--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+    
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
